Adds missing Tiles API dependency

--- a/pom.xml
+++ b/pom.xml
@@ -605,6 +605,11 @@
 
             <dependency>
                 <groupId>org.apache.tiles</groupId>
+                <artifactId>tiles-api</artifactId>
+                <version>${tiles.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tiles</groupId>
                 <artifactId>tiles-core</artifactId>
                 <version>${tiles.version}</version>
             </dependency>
