--- a/plugins/tiles/pom.xml
+++ b/plugins/tiles/pom.xml
@@ -36,6 +36,10 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-core</artifactId>
         </dependency>
         <dependency>
