WW-4381 - exclude org.olap4j:olap4j for compile, to fix broken builds behind Maven mirror

--- a/plugins/jasperreports/pom.xml
+++ b/plugins/jasperreports/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>jasperreports</artifactId>
             <version>6.0.3</version>
             <scope>provided</scope>
+            <exclusions>
+                <!-- This is currently not found in Maven central, yet not needed at compile time -->
+                <exclusion>
+                    <groupId>org.olap4j</groupId>
+                    <artifactId>olap4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     <properties>
