--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.5-SNAPSHOT</version>
+    <version>2.5-BETA3</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -25,7 +25,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.5-SNAPSHOT</struts-version.version>
+        <struts-version.version>2.5-BETA3</struts-version.version>
     </properties>
 
     <build>
@@ -175,4 +175,8 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+  <scm>
+    <tag>STRUTS_2_5_BETA3</tag>
+  </scm>
 </project>
