Every 2nd build on jenkins with jdk8 fails while generating javadoc for tiles-plugin. It fails at file serialized-form.html because it misses class org.apache.tiles.context.TilesRequestContextWrapper. That class was present in tiles 2 but is not present in tiles 3 anymore. To avoid failing builds due to this failOnError is set to false.

--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,9 @@
                         </reports>
                     </reportSet>
                 </reportSets>
+                <configuration>
+                    <failOnError>false</failOnError>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.rat</groupId>
