--- a/xwork-core/src/test/resources/com/opensymphony/xwork2/TestBean.properties
+++ b/xwork-core/src/test/resources/com/opensymphony/xwork2/TestBean.properties
@@ -1,1 +1,1 @@
-invalid.count=Count must be between ${min} and ${max}, current value is ${count}.
+invalid.count=Model: Count must be between ${min} and ${max}, current value is ${count}.
