--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -126,7 +126,7 @@
         </dependency>
 
         <dependency>
-            <groupId>opensymphony</groupId>
+            <groupId>org.sitemesh</groupId>
             <artifactId>sitemesh</artifactId>
         </dependency>
         <dependency>
