--- a/plugins/java8-support/pom.xml
+++ b/plugins/java8-support/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.3.25-SNAPSHOT</version>
+        <version>2.3.25</version>
     </parent>
 
     <artifactId>struts2-java8-support-plugin</artifactId>
