--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>2.3.25-SNAPSHOT</version>
+        <version>2.3.25</version>
     </parent>
 
     <artifactId>struts2-plugins</artifactId>
