--- a/plugins/osgi/pom.xml
+++ b/plugins/osgi/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.3.26-SNAPSHOT</version>
+        <version>2.3.26</version>
     </parent>
 
     <artifactId>struts2-osgi-plugin</artifactId>
