--- a/plugins/sitemesh/pom.xml
+++ b/plugins/sitemesh/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.3.26</version>
+        <version>2.3.27-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-sitemesh-plugin</artifactId>
