--- a/plugins/json/pom.xml
+++ b/plugins/json/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.3.27-SNAPSHOT</version>
+        <version>2.3.27</version>
     </parent>
 
     <artifactId>struts2-json-plugin</artifactId>
