--- a/archetypes/pom.xml
+++ b/archetypes/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>2.3.28</version>
+        <version>2.3.29-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-archetypes</artifactId>
