--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.3.20.1</version>
+    <version>2.3.20.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -24,7 +24,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.3.20.1</struts-version.version>
+        <struts-version.version>2.3.20.2-SNAPSHOT</struts-version.version>
     </properties>
 
     <dependencyManagement>
