--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.3.20.2-SNAPSHOT</version>
+    <version>2.3.20.2</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -24,7 +24,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.3.20.2-SNAPSHOT</struts-version.version>
+        <struts-version.version>2.3.20.2</struts-version.version>
     </properties>
 
     <dependencyManagement>
@@ -183,6 +183,6 @@
     </dependencyManagement>
 
   <scm>
-    <tag>STRUTS_2_3_20_1</tag>
+    <tag>STRUTS_2_3_20_2</tag>
   </scm>
 </project>
