--- a/plugins/tiles3/pom.xml
+++ b/plugins/tiles3/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.3.20.2-SNAPSHOT</version>
+        <version>2.3.20.2</version>
     </parent>
 
     <artifactId>struts2-tiles3-plugin</artifactId>
