--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-apps</artifactId>
-        <version>2.3.24.1</version>
+        <version>2.3.24.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-showcase</artifactId>
