--- a/archetypes/struts2-archetype-starter/pom.xml
+++ b/archetypes/struts2-archetype-starter/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-archetypes</artifactId>
-        <version>2.3.24.3-SNAPSHOT</version>
+        <version>2.3.24.2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
