--- a/plugins/config-browser/pom.xml
+++ b/plugins/config-browser/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.3.24.3-SNAPSHOT</version>
+        <version>2.3.24.2</version>
     </parent>
 
     <artifactId>struts2-config-browser-plugin</artifactId>
