--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.3.28</version>
+    <version>2.3.28.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -25,7 +25,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.3.28</struts-version.version>
+        <struts-version.version>2.3.28.1-SNAPSHOT</struts-version.version>
     </properties>
 
     <build>
