--- a/plugins/rest/pom.xml
+++ b/plugins/rest/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.3.28.1-SNAPSHOT</version>
+        <version>2.3.28.1</version>
     </parent>
 
     <artifactId>struts2-rest-plugin</artifactId>
