--- a/core/src/main/resources/com/opensymphony/xwork2/xwork-messages.properties
+++ b/core/src/main/resources/com/opensymphony/xwork2/xwork-messages.properties
@@ -7,4 +7,4 @@ xwork.error.action.execution=Error during Action invocation
 xwork.exception.missing-action=There is no Action mapped for action name {0}.
 xwork.exception.missing-package-action=There is no Action mapped for namespace {0} and action name {1}.
 xwork.default.invalid.fieldvalue=Invalid field value for field "{0}".
-
+struts.exception.method-not-allowed=Method {0} for action {1} is not allowed!
