--- a/xwork-core/pom.xml
+++ b/xwork-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>2.3.29-SNAPSHOT</version>
+        <version>2.3.29</version>
     </parent>
 
     <groupId>org.apache.struts.xwork</groupId>
