--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.5.1-SNAPSHOT</version>
+    <version>2.5.1</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -25,7 +25,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.5.1-SNAPSHOT</struts-version.version>
+        <struts-version.version>2.5.1</struts-version.version>
     </properties>
 
     <build>
@@ -170,4 +170,8 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+  <scm>
+    <tag>STRUTS_2_5_1</tag>
+  </scm>
 </project>
