--- a/plugins/oval/pom.xml
+++ b/plugins/oval/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.2</version>
+        <version>2.5.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-oval-plugin</artifactId>
