WW-4690 added version to jshint-maven-plugin

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -75,6 +75,7 @@
             <plugin>
                 <groupId>com.cj.jshintmojo</groupId>
                 <artifactId>jshint-maven-plugin</artifactId>
+                <version>1.6.0</version>
                 <executions>
                     <execution>
                         <goals>
