--- a/plugins/convention/pom.xml
+++ b/plugins/convention/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.4-SNAPSHOT</version>
+        <version>2.5.4</version>
     </parent>
 
     <artifactId>struts2-convention-plugin</artifactId>
