WW-4695 Puts back commons-collections 3.x to override Velocity's transitive dependency

--- a/pom.xml
+++ b/pom.xml
@@ -699,6 +699,12 @@
                 <artifactId>commons-collections4</artifactId>
                 <version>4.1</version>
             </dependency>
+            <!-- it's a dependency of Velocity defined here to override the transitive one -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>3.2.2</version>
+            </dependency>
             <dependency>
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
