--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -26,20 +26,9 @@
 
     <properties>
         <struts-version.version>2.5.14-SNAPSHOT</struts-version.version>
+        <maven.site.skip>true</maven.site.skip>
+        <maven.site.deploy.skip>true</maven.site.deploy.skip>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-site-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                    <skipDeploy>true</skipDeploy>
-                    <generateReports>false</generateReports>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencyManagement>
         <dependencies>
