Adds schema to have a proper URL

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 
     <ciManagement>
         <system>Jenkins</system>
-        <url>builds.apache.org/view/S-Z/view/Struts/</url>
+        <url>https://builds.apache.org/view/S-Z/view/Struts/</url>
         <notifiers>
             <notifier>
                 <type>mail</type>
