Suppresses some false positives on OWASP Dependency Check

--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,9 @@
                     <artifactId>dependency-check-maven</artifactId>
                     <version>3.0.1</version>
                     <configuration>
+                        <suppressionFiles>
+                            <suppressionFile>src/etc/project-suppression.xml</suppressionFile>
+                        </suppressionFiles>
                         <failBuildOnCVSS>8</failBuildOnCVSS>
                         <skipProvidedScope>true</skipProvidedScope>
                         <skipRuntimeScope>true</skipRuntimeScope>
