--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>2.6-SNAPSHOT</version>
+        <version>2.5.14.1</version>
     </parent>
 
     <artifactId>struts2-osgi-bundles</artifactId>
