Adds cache to speed up build on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ after_success:
 env:
   global:
     secure: DusDFL9cuX+mj64tXQfrYVbUVYnxlXmad4nuIMj0/lgDbwJ6kxYasJmR99bdvwu08gS9D5b7a+m7WJTN0FNATzEiiGDXcM+TiDPlYDh7dcalU4QGiLmMuCCEw1r7hp2XE4BWVgDfFhCsHhStgjE4RXzHIyPowoPXr4ugPf8at6w=
+
+cache:
+  directories:
+  - $HOME/.m2
